target/classes/META-INF/fabric8/openshift/proxy-data-info-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 736b3974f10de2c01f639c7b2bc29c07b03044a7
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: main
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=proxy-data-info&var-version=1.0
  labels:
    app: proxy-data-info
    provider: fabric8
    version: "1.0"
    group: co.data.info
  name: proxy-data-info
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: proxy-data-info
    provider: fabric8
    group: co.data.info
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 736b3974f10de2c01f639c7b2bc29c07b03044a7
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: main
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=proxy-data-info&var-version=1.0
      labels:
        app: proxy-data-info
        provider: fabric8
        version: "1.0"
        group: co.data.info
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: info/proxy-data-info:1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8082
          name: us-cli
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
            memory: 1Gi
          requests:
            cpu: "0.5"
            memory: 512Mi
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /config
          name: volume-configmap
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: globalConfig.properties
            path: globalConfig.properties
          name: global-config-map
        name: volume-configmap
  triggers:
  - type: ConfigChange
