target/classes/META-INF/fabric8/openshift/proxy-data-info-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: proxy-data-info
    provider: fabric8
    version: "1.0"
    group: co.data.info
  name: proxy-data-info
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: proxy-data-info
